asList issue fixed